// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Telescope form rendering should render correctly 1`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Telescope
      </p>
      <SelectField
        name="telescope"
        onChange={[Function]}
        value="SALT"
      >
        <AnyOption />
        <option
          key="SALT"
          value="SALT"
        >
          SALT
        </option>
        <option
          key="1.9 m"
          value="1.9 m"
        >
          1.9 m
        </option>
        <option
          key="Lesedi"
          value="Lesedi"
        >
          Lesedi
        </option>
      </SelectField>
    </styled.div>
  </styled.div>
  <SaltForm
    onChange={[Function]}
    salt={
      Object {
        "instrument": Object {
          "name": "RSS",
        },
        "name": "SALT",
      }
    }
  />
</Fragment>
`;

exports[`Telescope form rendering should render correctly 2`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Telescope
      </p>
      <SelectField
        name="telescope"
        onChange={[Function]}
        value="Lesedi"
      >
        <AnyOption />
        <option
          key="SALT"
          value="SALT"
        >
          SALT
        </option>
        <option
          key="1.9 m"
          value="1.9 m"
        >
          1.9 m
        </option>
        <option
          key="Lesedi"
          value="Lesedi"
        >
          Lesedi
        </option>
      </SelectField>
    </styled.div>
  </styled.div>
  <LesediForm
    lesedi={
      Object {
        "instrument": Object {
          "name": "SHOC",
        },
        "name": "Lesedi",
      }
    }
    onChange={[Function]}
  />
</Fragment>
`;

exports[`Telescope form rendering should render correctly 3`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Telescope
      </p>
      <SelectField
        name="telescope"
        onChange={[Function]}
        value="SALT"
      >
        <AnyOption />
        <option
          key="SALT"
          value="SALT"
        >
          SALT
        </option>
        <option
          key="1.9 m"
          value="1.9 m"
        >
          1.9 m
        </option>
        <option
          key="Lesedi"
          value="Lesedi"
        >
          Lesedi
        </option>
      </SelectField>
    </styled.div>
  </styled.div>
  <SaltForm
    onChange={[Function]}
    salt={
      Object {
        "instrument": Object {
          "name": "HRS",
        },
        "name": "SALT",
      }
    }
  />
</Fragment>
`;

exports[`Telescope form rendering should render correctly 4`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Telescope
      </p>
      <SelectField
        name="telescope"
        onChange={[Function]}
        value="SALT"
      >
        <AnyOption />
        <option
          key="SALT"
          value="SALT"
        >
          SALT
        </option>
        <option
          key="1.9 m"
          value="1.9 m"
        >
          1.9 m
        </option>
        <option
          key="Lesedi"
          value="Lesedi"
        >
          Lesedi
        </option>
      </SelectField>
    </styled.div>
  </styled.div>
  <SaltForm
    onChange={[Function]}
    salt={
      Object {
        "instrument": Object {
          "mode": "Fabry Perot",
          "name": "RSS",
        },
        "name": "SALT",
      }
    }
  />
</Fragment>
`;

exports[`Telescope form rendering should render correctly 5`] = `
<Fragment>
  <styled.div>
    <styled.div>
      <p>
        Telescope
      </p>
      <SelectField
        name="telescope"
        onChange={[Function]}
        value="SALT"
      >
        <AnyOption />
        <option
          key="SALT"
          value="SALT"
        >
          SALT
        </option>
        <option
          key="1.9 m"
          value="1.9 m"
        >
          1.9 m
        </option>
        <option
          key="Lesedi"
          value="Lesedi"
        >
          Lesedi
        </option>
      </SelectField>
    </styled.div>
  </styled.div>
  <SaltForm
    onChange={[Function]}
    salt={
      Object {
        "instrument": Object {
          "detectorMode": "Normal",
          "mode": "Fabry Perot",
          "name": "RSS",
        },
        "name": "SALT",
      }
    }
  />
</Fragment>
`;
